Assignement_2/parser.out
Created by PLY version 3.4 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> stmt_list
Rule 2     stmt_list -> stmt SEMICOLON stmt_list
Rule 3     stmt_list -> stmt
Rule 4     stmt -> assign_stmt
Rule 5     stmt -> while_stmt
Rule 6     stmt -> if_stmt
Rule 7     stmt -> define_stmt
Rule 8     expr -> expr PLUS term
Rule 9     expr -> expr MINUS term
Rule 10    expr_list -> expr COMMA expr_list
Rule 11    expr_list -> expr
Rule 12    expr -> term
Rule 13    term -> term TIMES fact
Rule 14    term -> fact
Rule 15    fact -> LPAREN expr RPAREN
Rule 16    fact -> NUMBER
Rule 17    fact -> IDENT
Rule 18    fact -> func_call
Rule 19    assign_stmt -> assign_stmt_expr
Rule 20    assign_stmt -> assign_stmt_list
Rule 21    assign_stmt_expr -> IDENT ASSIGNOP expr
Rule 22    assign_stmt_list -> IDENT ASSIGNOP list
Rule 23    list -> LBRACKET sequence RBRACKET
Rule 24    list -> LBRACKET RBRACKET
Rule 25    sequence -> listelement COMMA sequence
Rule 26    sequence -> listelement
Rule 27    listelement -> list
Rule 28    listelement -> NUMBER
Rule 29    while_stmt -> WHILE expr DO stmt_list OD
Rule 30    if_stmt -> IF expr THEN stmt_list ELSE stmt_list FI
Rule 31    define_stmt -> DEFINE IDENT PROC LPAREN param_list RPAREN stmt_list END
Rule 32    param_list -> IDENT COMMA param_list
Rule 33    param_list -> IDENT
Rule 34    func_call -> IDENT LPAREN expr_list RPAREN

Terminals, with rules where they appear

ASSIGNOP             : 21 22
COMMA                : 10 25 32
DEFINE               : 31
DO                   : 29
ELSE                 : 30
END                  : 31
FI                   : 30
IDENT                : 17 21 22 31 32 33 34
IF                   : 30
LBRACKET             : 23 24
LPAREN               : 15 31 34
MINUS                : 9
NUMBER               : 16 28
OD                   : 29
PLUS                 : 8
PROC                 : 31
RBRACKET             : 23 24
RPAREN               : 15 31 34
SEMICOLON            : 2
THEN                 : 30
TIMES                : 13
WHILE                : 29
error                : 

Nonterminals, with rules where they appear

assign_stmt          : 4
assign_stmt_expr     : 19
assign_stmt_list     : 20
define_stmt          : 7
expr                 : 8 9 10 11 15 21 29 30
expr_list            : 10 34
fact                 : 13 14
func_call            : 18
if_stmt              : 6
list                 : 22 27
listelement          : 25 26
param_list           : 31 32
program              : 0
sequence             : 23 25
stmt                 : 2 3
stmt_list            : 1 2 29 30 30 31
term                 : 8 9 12 13
while_stmt           : 5

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . stmt_list
    (2) stmt_list -> . stmt SEMICOLON stmt_list
    (3) stmt_list -> . stmt
    (4) stmt -> . assign_stmt
    (5) stmt -> . while_stmt
    (6) stmt -> . if_stmt
    (7) stmt -> . define_stmt
    (19) assign_stmt -> . assign_stmt_expr
    (20) assign_stmt -> . assign_stmt_list
    (29) while_stmt -> . WHILE expr DO stmt_list OD
    (30) if_stmt -> . IF expr THEN stmt_list ELSE stmt_list FI
    (31) define_stmt -> . DEFINE IDENT PROC LPAREN param_list RPAREN stmt_list END
    (21) assign_stmt_expr -> . IDENT ASSIGNOP expr
    (22) assign_stmt_list -> . IDENT ASSIGNOP list

    WHILE           shift and go to state 1
    IF              shift and go to state 10
    DEFINE          shift and go to state 5
    IDENT           shift and go to state 6

    stmt_list                      shift and go to state 11
    if_stmt                        shift and go to state 12
    define_stmt                    shift and go to state 2
    stmt                           shift and go to state 7
    assign_stmt                    shift and go to state 3
    while_stmt                     shift and go to state 13
    program                        shift and go to state 4
    assign_stmt_list               shift and go to state 8
    assign_stmt_expr               shift and go to state 9

state 1

    (29) while_stmt -> WHILE . expr DO stmt_list OD
    (8) expr -> . expr PLUS term
    (9) expr -> . expr MINUS term
    (12) expr -> . term
    (13) term -> . term TIMES fact
    (14) term -> . fact
    (15) fact -> . LPAREN expr RPAREN
    (16) fact -> . NUMBER
    (17) fact -> . IDENT
    (18) fact -> . func_call
    (34) func_call -> . IDENT LPAREN expr_list RPAREN

    LPAREN          shift and go to state 19
    NUMBER          shift and go to state 18
    IDENT           shift and go to state 15

    func_call                      shift and go to state 16
    term                           shift and go to state 14
    expr                           shift and go to state 17
    fact                           shift and go to state 20

state 2

    (7) stmt -> define_stmt .

    SEMICOLON       reduce using rule 7 (stmt -> define_stmt .)
    ELSE            reduce using rule 7 (stmt -> define_stmt .)
    END             reduce using rule 7 (stmt -> define_stmt .)
    FI              reduce using rule 7 (stmt -> define_stmt .)
    $end            reduce using rule 7 (stmt -> define_stmt .)
    OD              reduce using rule 7 (stmt -> define_stmt .)


state 3

    (4) stmt -> assign_stmt .

    SEMICOLON       reduce using rule 4 (stmt -> assign_stmt .)
    ELSE            reduce using rule 4 (stmt -> assign_stmt .)
    END             reduce using rule 4 (stmt -> assign_stmt .)
    FI              reduce using rule 4 (stmt -> assign_stmt .)
    $end            reduce using rule 4 (stmt -> assign_stmt .)
    OD              reduce using rule 4 (stmt -> assign_stmt .)


state 4

    (0) S' -> program .



state 5

    (31) define_stmt -> DEFINE . IDENT PROC LPAREN param_list RPAREN stmt_list END

    IDENT           shift and go to state 21


state 6

    (21) assign_stmt_expr -> IDENT . ASSIGNOP expr
    (22) assign_stmt_list -> IDENT . ASSIGNOP list

    ASSIGNOP        shift and go to state 22


state 7

    (2) stmt_list -> stmt . SEMICOLON stmt_list
    (3) stmt_list -> stmt .

    SEMICOLON       shift and go to state 23
    $end            reduce using rule 3 (stmt_list -> stmt .)
    OD              reduce using rule 3 (stmt_list -> stmt .)
    ELSE            reduce using rule 3 (stmt_list -> stmt .)
    FI              reduce using rule 3 (stmt_list -> stmt .)
    END             reduce using rule 3 (stmt_list -> stmt .)


state 8

    (20) assign_stmt -> assign_stmt_list .

    SEMICOLON       reduce using rule 20 (assign_stmt -> assign_stmt_list .)
    $end            reduce using rule 20 (assign_stmt -> assign_stmt_list .)
    END             reduce using rule 20 (assign_stmt -> assign_stmt_list .)
    FI              reduce using rule 20 (assign_stmt -> assign_stmt_list .)
    OD              reduce using rule 20 (assign_stmt -> assign_stmt_list .)
    ELSE            reduce using rule 20 (assign_stmt -> assign_stmt_list .)


state 9

    (19) assign_stmt -> assign_stmt_expr .

    SEMICOLON       reduce using rule 19 (assign_stmt -> assign_stmt_expr .)
    $end            reduce using rule 19 (assign_stmt -> assign_stmt_expr .)
    END             reduce using rule 19 (assign_stmt -> assign_stmt_expr .)
    FI              reduce using rule 19 (assign_stmt -> assign_stmt_expr .)
    OD              reduce using rule 19 (assign_stmt -> assign_stmt_expr .)
    ELSE            reduce using rule 19 (assign_stmt -> assign_stmt_expr .)


state 10

    (30) if_stmt -> IF . expr THEN stmt_list ELSE stmt_list FI
    (8) expr -> . expr PLUS term
    (9) expr -> . expr MINUS term
    (12) expr -> . term
    (13) term -> . term TIMES fact
    (14) term -> . fact
    (15) fact -> . LPAREN expr RPAREN
    (16) fact -> . NUMBER
    (17) fact -> . IDENT
    (18) fact -> . func_call
    (34) func_call -> . IDENT LPAREN expr_list RPAREN

    LPAREN          shift and go to state 19
    NUMBER          shift and go to state 18
    IDENT           shift and go to state 15

    func_call                      shift and go to state 16
    term                           shift and go to state 14
    expr                           shift and go to state 24
    fact                           shift and go to state 20

state 11

    (1) program -> stmt_list .

    $end            reduce using rule 1 (program -> stmt_list .)


state 12

    (6) stmt -> if_stmt .

    SEMICOLON       reduce using rule 6 (stmt -> if_stmt .)
    ELSE            reduce using rule 6 (stmt -> if_stmt .)
    END             reduce using rule 6 (stmt -> if_stmt .)
    FI              reduce using rule 6 (stmt -> if_stmt .)
    $end            reduce using rule 6 (stmt -> if_stmt .)
    OD              reduce using rule 6 (stmt -> if_stmt .)


state 13

    (5) stmt -> while_stmt .

    SEMICOLON       reduce using rule 5 (stmt -> while_stmt .)
    ELSE            reduce using rule 5 (stmt -> while_stmt .)
    END             reduce using rule 5 (stmt -> while_stmt .)
    FI              reduce using rule 5 (stmt -> while_stmt .)
    $end            reduce using rule 5 (stmt -> while_stmt .)
    OD              reduce using rule 5 (stmt -> while_stmt .)


state 14

    (12) expr -> term .
    (13) term -> term . TIMES fact

    THEN            reduce using rule 12 (expr -> term .)
    PLUS            reduce using rule 12 (expr -> term .)
    MINUS           reduce using rule 12 (expr -> term .)
    RPAREN          reduce using rule 12 (expr -> term .)
    COMMA           reduce using rule 12 (expr -> term .)
    SEMICOLON       reduce using rule 12 (expr -> term .)
    $end            reduce using rule 12 (expr -> term .)
    OD              reduce using rule 12 (expr -> term .)
    ELSE            reduce using rule 12 (expr -> term .)
    FI              reduce using rule 12 (expr -> term .)
    END             reduce using rule 12 (expr -> term .)
    DO              reduce using rule 12 (expr -> term .)
    TIMES           shift and go to state 25


state 15

    (17) fact -> IDENT .
    (34) func_call -> IDENT . LPAREN expr_list RPAREN

    TIMES           reduce using rule 17 (fact -> IDENT .)
    RPAREN          reduce using rule 17 (fact -> IDENT .)
    PLUS            reduce using rule 17 (fact -> IDENT .)
    MINUS           reduce using rule 17 (fact -> IDENT .)
    DO              reduce using rule 17 (fact -> IDENT .)
    THEN            reduce using rule 17 (fact -> IDENT .)
    SEMICOLON       reduce using rule 17 (fact -> IDENT .)
    $end            reduce using rule 17 (fact -> IDENT .)
    OD              reduce using rule 17 (fact -> IDENT .)
    ELSE            reduce using rule 17 (fact -> IDENT .)
    FI              reduce using rule 17 (fact -> IDENT .)
    END             reduce using rule 17 (fact -> IDENT .)
    COMMA           reduce using rule 17 (fact -> IDENT .)
    LPAREN          shift and go to state 26


state 16

    (18) fact -> func_call .

    TIMES           reduce using rule 18 (fact -> func_call .)
    RPAREN          reduce using rule 18 (fact -> func_call .)
    PLUS            reduce using rule 18 (fact -> func_call .)
    MINUS           reduce using rule 18 (fact -> func_call .)
    DO              reduce using rule 18 (fact -> func_call .)
    THEN            reduce using rule 18 (fact -> func_call .)
    SEMICOLON       reduce using rule 18 (fact -> func_call .)
    $end            reduce using rule 18 (fact -> func_call .)
    OD              reduce using rule 18 (fact -> func_call .)
    ELSE            reduce using rule 18 (fact -> func_call .)
    FI              reduce using rule 18 (fact -> func_call .)
    END             reduce using rule 18 (fact -> func_call .)
    COMMA           reduce using rule 18 (fact -> func_call .)


state 17

    (29) while_stmt -> WHILE expr . DO stmt_list OD
    (8) expr -> expr . PLUS term
    (9) expr -> expr . MINUS term

    DO              shift and go to state 27
    PLUS            shift and go to state 28
    MINUS           shift and go to state 29


state 18

    (16) fact -> NUMBER .

    TIMES           reduce using rule 16 (fact -> NUMBER .)
    RPAREN          reduce using rule 16 (fact -> NUMBER .)
    PLUS            reduce using rule 16 (fact -> NUMBER .)
    MINUS           reduce using rule 16 (fact -> NUMBER .)
    DO              reduce using rule 16 (fact -> NUMBER .)
    THEN            reduce using rule 16 (fact -> NUMBER .)
    SEMICOLON       reduce using rule 16 (fact -> NUMBER .)
    $end            reduce using rule 16 (fact -> NUMBER .)
    OD              reduce using rule 16 (fact -> NUMBER .)
    ELSE            reduce using rule 16 (fact -> NUMBER .)
    FI              reduce using rule 16 (fact -> NUMBER .)
    END             reduce using rule 16 (fact -> NUMBER .)
    COMMA           reduce using rule 16 (fact -> NUMBER .)


state 19

    (15) fact -> LPAREN . expr RPAREN
    (8) expr -> . expr PLUS term
    (9) expr -> . expr MINUS term
    (12) expr -> . term
    (13) term -> . term TIMES fact
    (14) term -> . fact
    (15) fact -> . LPAREN expr RPAREN
    (16) fact -> . NUMBER
    (17) fact -> . IDENT
    (18) fact -> . func_call
    (34) func_call -> . IDENT LPAREN expr_list RPAREN

    LPAREN          shift and go to state 19
    NUMBER          shift and go to state 18
    IDENT           shift and go to state 15

    func_call                      shift and go to state 16
    expr                           shift and go to state 30
    term                           shift and go to state 14
    fact                           shift and go to state 20

state 20

    (14) term -> fact .

    TIMES           reduce using rule 14 (term -> fact .)
    PLUS            reduce using rule 14 (term -> fact .)
    MINUS           reduce using rule 14 (term -> fact .)
    SEMICOLON       reduce using rule 14 (term -> fact .)
    $end            reduce using rule 14 (term -> fact .)
    OD              reduce using rule 14 (term -> fact .)
    ELSE            reduce using rule 14 (term -> fact .)
    FI              reduce using rule 14 (term -> fact .)
    END             reduce using rule 14 (term -> fact .)
    COMMA           reduce using rule 14 (term -> fact .)
    RPAREN          reduce using rule 14 (term -> fact .)
    THEN            reduce using rule 14 (term -> fact .)
    DO              reduce using rule 14 (term -> fact .)


state 21

    (31) define_stmt -> DEFINE IDENT . PROC LPAREN param_list RPAREN stmt_list END

    PROC            shift and go to state 31


state 22

    (21) assign_stmt_expr -> IDENT ASSIGNOP . expr
    (22) assign_stmt_list -> IDENT ASSIGNOP . list
    (8) expr -> . expr PLUS term
    (9) expr -> . expr MINUS term
    (12) expr -> . term
    (23) list -> . LBRACKET sequence RBRACKET
    (24) list -> . LBRACKET RBRACKET
    (13) term -> . term TIMES fact
    (14) term -> . fact
    (15) fact -> . LPAREN expr RPAREN
    (16) fact -> . NUMBER
    (17) fact -> . IDENT
    (18) fact -> . func_call
    (34) func_call -> . IDENT LPAREN expr_list RPAREN

    LBRACKET        shift and go to state 34
    LPAREN          shift and go to state 19
    NUMBER          shift and go to state 18
    IDENT           shift and go to state 15

    func_call                      shift and go to state 16
    term                           shift and go to state 14
    expr                           shift and go to state 32
    list                           shift and go to state 33
    fact                           shift and go to state 20

state 23

    (2) stmt_list -> stmt SEMICOLON . stmt_list
    (2) stmt_list -> . stmt SEMICOLON stmt_list
    (3) stmt_list -> . stmt
    (4) stmt -> . assign_stmt
    (5) stmt -> . while_stmt
    (6) stmt -> . if_stmt
    (7) stmt -> . define_stmt
    (19) assign_stmt -> . assign_stmt_expr
    (20) assign_stmt -> . assign_stmt_list
    (29) while_stmt -> . WHILE expr DO stmt_list OD
    (30) if_stmt -> . IF expr THEN stmt_list ELSE stmt_list FI
    (31) define_stmt -> . DEFINE IDENT PROC LPAREN param_list RPAREN stmt_list END
    (21) assign_stmt_expr -> . IDENT ASSIGNOP expr
    (22) assign_stmt_list -> . IDENT ASSIGNOP list

    WHILE           shift and go to state 1
    IF              shift and go to state 10
    DEFINE          shift and go to state 5
    IDENT           shift and go to state 6

    stmt_list                      shift and go to state 35
    if_stmt                        shift and go to state 12
    define_stmt                    shift and go to state 2
    stmt                           shift and go to state 7
    assign_stmt                    shift and go to state 3
    while_stmt                     shift and go to state 13
    assign_stmt_list               shift and go to state 8
    assign_stmt_expr               shift and go to state 9

state 24

    (30) if_stmt -> IF expr . THEN stmt_list ELSE stmt_list FI
    (8) expr -> expr . PLUS term
    (9) expr -> expr . MINUS term

    THEN            shift and go to state 36
    PLUS            shift and go to state 28
    MINUS           shift and go to state 29


state 25

    (13) term -> term TIMES . fact
    (15) fact -> . LPAREN expr RPAREN
    (16) fact -> . NUMBER
    (17) fact -> . IDENT
    (18) fact -> . func_call
    (34) func_call -> . IDENT LPAREN expr_list RPAREN

    LPAREN          shift and go to state 19
    NUMBER          shift and go to state 18
    IDENT           shift and go to state 15

    func_call                      shift and go to state 16
    fact                           shift and go to state 37

state 26

    (34) func_call -> IDENT LPAREN . expr_list RPAREN
    (10) expr_list -> . expr COMMA expr_list
    (11) expr_list -> . expr
    (8) expr -> . expr PLUS term
    (9) expr -> . expr MINUS term
    (12) expr -> . term
    (13) term -> . term TIMES fact
    (14) term -> . fact
    (15) fact -> . LPAREN expr RPAREN
    (16) fact -> . NUMBER
    (17) fact -> . IDENT
    (18) fact -> . func_call
    (34) func_call -> . IDENT LPAREN expr_list RPAREN

    LPAREN          shift and go to state 19
    NUMBER          shift and go to state 18
    IDENT           shift and go to state 15

    func_call                      shift and go to state 16
    expr_list                      shift and go to state 38
    term                           shift and go to state 14
    fact                           shift and go to state 20
    expr                           shift and go to state 39

state 27

    (29) while_stmt -> WHILE expr DO . stmt_list OD
    (2) stmt_list -> . stmt SEMICOLON stmt_list
    (3) stmt_list -> . stmt
    (4) stmt -> . assign_stmt
    (5) stmt -> . while_stmt
    (6) stmt -> . if_stmt
    (7) stmt -> . define_stmt
    (19) assign_stmt -> . assign_stmt_expr
    (20) assign_stmt -> . assign_stmt_list
    (29) while_stmt -> . WHILE expr DO stmt_list OD
    (30) if_stmt -> . IF expr THEN stmt_list ELSE stmt_list FI
    (31) define_stmt -> . DEFINE IDENT PROC LPAREN param_list RPAREN stmt_list END
    (21) assign_stmt_expr -> . IDENT ASSIGNOP expr
    (22) assign_stmt_list -> . IDENT ASSIGNOP list

    WHILE           shift and go to state 1
    IF              shift and go to state 10
    DEFINE          shift and go to state 5
    IDENT           shift and go to state 6

    stmt_list                      shift and go to state 40
    if_stmt                        shift and go to state 12
    define_stmt                    shift and go to state 2
    stmt                           shift and go to state 7
    assign_stmt                    shift and go to state 3
    while_stmt                     shift and go to state 13
    assign_stmt_list               shift and go to state 8
    assign_stmt_expr               shift and go to state 9

state 28

    (8) expr -> expr PLUS . term
    (13) term -> . term TIMES fact
    (14) term -> . fact
    (15) fact -> . LPAREN expr RPAREN
    (16) fact -> . NUMBER
    (17) fact -> . IDENT
    (18) fact -> . func_call
    (34) func_call -> . IDENT LPAREN expr_list RPAREN

    LPAREN          shift and go to state 19
    NUMBER          shift and go to state 18
    IDENT           shift and go to state 15

    func_call                      shift and go to state 16
    term                           shift and go to state 41
    fact                           shift and go to state 20

state 29

    (9) expr -> expr MINUS . term
    (13) term -> . term TIMES fact
    (14) term -> . fact
    (15) fact -> . LPAREN expr RPAREN
    (16) fact -> . NUMBER
    (17) fact -> . IDENT
    (18) fact -> . func_call
    (34) func_call -> . IDENT LPAREN expr_list RPAREN

    LPAREN          shift and go to state 19
    NUMBER          shift and go to state 18
    IDENT           shift and go to state 15

    func_call                      shift and go to state 16
    term                           shift and go to state 42
    fact                           shift and go to state 20

state 30

    (15) fact -> LPAREN expr . RPAREN
    (8) expr -> expr . PLUS term
    (9) expr -> expr . MINUS term

    RPAREN          shift and go to state 43
    PLUS            shift and go to state 28
    MINUS           shift and go to state 29


state 31

    (31) define_stmt -> DEFINE IDENT PROC . LPAREN param_list RPAREN stmt_list END

    LPAREN          shift and go to state 44


state 32

    (21) assign_stmt_expr -> IDENT ASSIGNOP expr .
    (8) expr -> expr . PLUS term
    (9) expr -> expr . MINUS term

    SEMICOLON       reduce using rule 21 (assign_stmt_expr -> IDENT ASSIGNOP expr .)
    ELSE            reduce using rule 21 (assign_stmt_expr -> IDENT ASSIGNOP expr .)
    END             reduce using rule 21 (assign_stmt_expr -> IDENT ASSIGNOP expr .)
    FI              reduce using rule 21 (assign_stmt_expr -> IDENT ASSIGNOP expr .)
    $end            reduce using rule 21 (assign_stmt_expr -> IDENT ASSIGNOP expr .)
    OD              reduce using rule 21 (assign_stmt_expr -> IDENT ASSIGNOP expr .)
    PLUS            shift and go to state 28
    MINUS           shift and go to state 29


state 33

    (22) assign_stmt_list -> IDENT ASSIGNOP list .
